Name:               language-tools
Version:            0.1
Cabal-Version:      >= 1.14
Author:             Richard Cobbe
Synopsis:           Tool for type setting lexicon, morphological database
Build-Type:         Simple
License:            Apache-2.0
License-File:       LICENSE
Copyright:          (c) 2017 Richard Cobbe
Maintainer:         rcobbe@rcobbe.net
Stability:          alpha

Library
  hs-source-dirs: lib
  Default-Language: Haskell2010
  Build-Tools: alex, happy
  GHC-Options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  Exposed-Modules:
    LT.Latin.Ast,
    LT.Latin.Parser,
    LT.Latin.Scanner,
    LT.Text
  Build-Depends:
    base == 4.8.*,
    array == 0.5.*,
    containers == 0.5.*,
    text == 1.2.*,
    textual == 2.0.*

Test-Suite language-tools-tests
  Main-Is: RunTests.hs
  hs-source-dirs: test
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Ghc-Options: -fwarn-incomplete-patterns
  Build-Depends:
    base == 4.8.*,
    HUnit == 1.6.*,
    containers == 0.5.*,
    language-tools
                     
                     
