-- Copyright 2017 Richard Cobbe
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name:               language-tools
Version:            0.1
Cabal-Version:      >= 1.14
Author:             Richard Cobbe
Synopsis:           Tool for type setting lexicon, morphological database
Build-Type:         Simple
License:            Apache-2.0
License-File:       LICENSE
Copyright:          (c) 2017 Richard Cobbe
Maintainer:         rcobbe@rcobbe.net
Stability:          alpha

Library
  hs-source-dirs: lib
  Default-Language: Haskell2010
  Build-Tools: alex, happy
  GHC-Options: -fwarn-incomplete-patterns -fwarn-unrecognised-pragmas
  Exposed-Modules:
    LT.Latin.Ast,
    LT.Latin.Letter,
    LT.Latin.Parser,
    LT.Latin.Scanner,
    LT.Text
  Build-Depends:
    base == 4.8.*,
    array == 0.5.*,
    containers == 0.5.*,
    transformers == 0.4.*,
    text == 1.2.*,
    textual == 2.0.*

Test-Suite language-tools-tests
  Main-Is: RunTests.hs
  hs-source-dirs: test
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Ghc-Options: -fwarn-incomplete-patterns
  Build-Depends:
    base == 4.8.*,
    HUnit == 1.6.*,
    containers == 0.5.*,
    transformers == 0.4.*,
    test-utils == 1.6.*,
    language-tools
                     
                     
